removed BASE tag

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <title>Steven Lund</title>
 
-<BASE href="https://stevenlund.github.io/profile">
-<meta name="Steven Lund Portfolio" content="Steven Lund's work and project experience." />
+<!-- <BASE href="https://stevenlund.github.io/profile">
+<meta name="Steven Lund Portfolio" content="Steven Lund's work and project experience." /> -->
 
 <!-- Mobile Specifics -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
