changed color scheme

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
   <div class="container">
     <!-- Title Page -->
     <div class="row">
-      <div class="span12">
+      <div class="span12" id=about_me>
         <div class="title-page">
           <h2 class="title">About Me</h2>
-          <h3 class="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, suscipit veniam? Perferendis ab eos obcaecati reprehenderit, eaque molestias at modi quam, quisquam eveniet numquam totam placeat fugit odio eum dignissimos.</h3>
+          <h3 class="title-description">Former engineer at Toyota, current full-stack developer. Music creator and consumer. My current goal is to continiue pursuing a few passion projects while gaining employment at a company that fosters a diverse environment full of other creatives that will continously push me to grow both as a developer and as a person. <h3>
         </div>
       </div>
     </div>
@@ -254,8 +254,8 @@
           <span class="overlay-img"></span>
           <span class="overlay-text-thumb">Education</span>
         </div>
-        <img src="img/profile/michiganstate.JPG" alt="Education">
-        <img src="img/profile/amsterdam_noord.jpg" alt="Le Wagon Coding Bootcamp">
+<!--         <img src="img/profile/michiganstate.JPG" alt="Education">
+ -->        <img src="img/profile/amsterdam.jpg" alt="Le Wagon Coding Bootcamp">
       </div>
       <h3 class="profile-name">Education</h3>
       <div class="d-flex justify-content-around">
@@ -310,14 +310,16 @@
 </div>
 <h3 class="profile-name">Tools</h3>
 <div class="d-flex justify-content-between">
-  <img src="img/icons/html5.png" alt="HTML 5">
+<!--   <img src="img/icons/html5.png" alt="HTML 5">
   <img src="img/icons/css3.png" alt="CSS 3">
-  <img src="img/icons/javascript.png" alt="JavaScript">
+  <img src="img/icons/javascript.png" alt="JavaScript"> -->
+  <img src="img/icons/rhtmlcssjavascript.png" alt="">
   <img src="img/icons/python.png" alt="Python">
   <img src="img/icons/rails.png" alt="Rails">
   <img src="img/icons/ruby.png" alt="Ruby">
+  <img src="img/icons/matlab.png" alt="">
 </div>
-<p class="profile-description">Proficent with Ruby, Rails, JavaScript (ES6), Python, HTML, CSS</p>
+<p class="profile-description">Proficent with Ruby on Rails, JavaScript (ES6), Python, HTML, CSS, MATLAB. Eager to learn more!</p>
 </div>
 <!-- End Profile -->
 
