--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <title>Steven Lund</title>
 
-<!-- <BASE href="https://chongr.github.io"> -->
+<BASE href="https://stevenlund.github.io/profile/">
 
 <meta name="description" content="Insert Your Site Description" />
 
