--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <title>Steven Lund</title>
-
-<BASE href="https://stevenlund.github.io/profile/">
+<!--
+<BASE href="https://stevenlund.github.io/profile/"> -->
 
 <meta name="description" content="Insert Your Site Description" />
 
@@ -157,10 +157,10 @@
      <nav id="options" class="work-nav">
       <ul id="filters" class="option-set" data-option-key="filter">
        <li class="type-work">Work Type</li>
-       <li><a href="#filter" data-option-value="*" class="selected">All Projects</a></li>
-       <li><a href="#filter" data-option-value=".web">Web</a></li>
-       <li><a href="#filter" data-option-value=".engineering">Engineering</a></li>
-       <li><a href="#filter" data-option-value=".programming">Programming</a></li>
+       <li><a href="profile/#filter" data-option-value="*" class="selected">All Projects</a></li>
+       <li><a href="profile/#filter" data-option-value=".web">Web</a></li>
+       <li><a href="profile/#filter" data-option-value=".engineering">Engineering</a></li>
+       <li><a href="profile/#filter" data-option-value=".programming">Programming</a></li>
      </ul>
    </nav>
    <!-- End Filter -->
