added second bootstrap link:

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Steven Lund bootstrap addition line 29 -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--Added second bootstrap link -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 <!-- Main Style -->
 <link href="css/main.css" rel="stylesheet">
