--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <span class="overlay-img"></span>
     <span class="overlay-text-thumb">Tools</span>
   </div>
-  <img src="img/profile/kid.jpg" alt="Tools">
+  <img src="img/profile/steven_lund_profile_pic.jpg" alt="Tools">
 </div>
 <h3 class="profile-name">Tools</h3>
 <div class="d-flex justify-content-between">
