find and replace all http with https for gh pages

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -205,7 +205,7 @@
            <span class="overlay-img-thumb font-icon-plus"></span>
          </a>
          <!-- Thumb Image and Description -->
-         <img src="img/work/rav4.jpg" alt="Upgraded the brake actuator communication system hardware and software to allow the equipment to communicate via bluetooth and fill brake fluid in the new RAV 4. Required PLC programming with PCwin on TOYOPUC controllers. I led this project at Toyota Motor Manufacturing Kentucky." data-link="http://www.slideshare.net/RyanChong14/wi-fi-enabled-soil-moisture-sensor" data-link-type='Slideshow'>
+         <img src="img/work/rav4.jpg" alt="Upgraded the brake actuator communication system hardware and software to allow the equipment to communicate via bluetooth and fill brake fluid in the new RAV 4. Required PLC programming with PCwin on TOYOPUC controllers. I led this project at Toyota Motor Manufacturing Kentucky." data-link="https://www.slideshare.net/RyanChong14/wi-fi-enabled-soil-moisture-sensor" data-link-type='Slideshow'>
        </li>
        <!-- End Item Project -->
 
@@ -418,14 +418,14 @@
                 <nav id="social">
                     <ul>
                         <li><a href="https://twitter.com/Bluxart" title="Follow Me on Twitter" target="_blank"><span class="font-icon-social-twitter"></span></a></li>
-                        <li><a href="http://dribbble.com/Bluxart" title="Follow Me on Dribbble" target="_blank"><span class="font-icon-social-dribbble"></span></a></li>
-                        <li><a href="http://forrst.com/people/Bluxart" title="Follow Me on Forrst" target="_blank"><span class="font-icon-social-forrst"></span></a></li>
-                        <li><a href="http://www.behance.net/alessioatzeni" title="Follow Me on Behance" target="_blank"><span class="font-icon-social-behance"></span></a></li>
+                        <li><a href="https://dribbble.com/Bluxart" title="Follow Me on Dribbble" target="_blank"><span class="font-icon-social-dribbble"></span></a></li>
+                        <li><a href="https://forrst.com/people/Bluxart" title="Follow Me on Forrst" target="_blank"><span class="font-icon-social-forrst"></span></a></li>
+                        <li><a href="https://www.behance.net/alessioatzeni" title="Follow Me on Behance" target="_blank"><span class="font-icon-social-behance"></span></a></li>
                         <li><a href="https://www.facebook.com/Bluxart" title="Follow Me on Facebook" target="_blank"><span class="font-icon-social-facebook"></span></a></li>
                         <li><a href="https://plus.google.com/105500420878314068694" title="Follow Me on Google Plus" target="_blank"><span class="font-icon-social-google-plus"></span></a></li>
-                        <li><a href="http://www.linkedin.com/in/alessioatzeni" title="Follow Me on LinkedIn" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>
-                        <li><a href="http://themeforest.net/user/Bluxart" title="Follow Me on ThemeForest" target="_blank"><span class="font-icon-social-envato"></span></a></li>
-                        <li><a href="http://zerply.com/Bluxart/public" title="Follow Me on Zerply" target="_blank"><span class="font-icon-social-zerply"></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/alessioatzeni" title="Follow Me on LinkedIn" target="_blank"><span class="font-icon-social-linkedin"></span></a></li>
+                        <li><a href="https://themeforest.net/user/Bluxart" title="Follow Me on ThemeForest" target="_blank"><span class="font-icon-social-envato"></span></a></li>
+                        <li><a href="https://zerply.com/Bluxart/public" title="Follow Me on Zerply" target="_blank"><span class="font-icon-social-zerply"></span></a></li>
                     </ul>
                 </nav>
             </div>
