fixed slider images

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
            <span class="overlay-img-thumb font-icon-plus"></span>
          </a>
          <!-- Thumb Image and Description -->
-         <img src="img/work/rav4.jpg" alt="Upgraded the brake actuator communication system hardware and software to allow the equipment to communicate via bluetooth and fill brake fluid in the new RAV 4. Required PLC programming with PCwin on TOYOPUC controllers. I led this project at Toyota Motor Manufacturing Kentucky." data-link="https://www.slideshare.net/RyanChong14/wi-fi-enabled-soil-moisture-sensor" data-link-type='Slideshow'>
+         <img src="img/work/rav4.jpg" alt="Upgraded the brake actuator communication system hardware and software to allow the equipment to communicate via bluetooth and fill brake fluid in the new RAV 4. Required PLC programming with PCwin on TOYOPUC controllers. I led this project at Toyota Motor Manufacturing Kentucky." data-link="https://pressroom.toyota.com/toyota-kentucky-begins-production-of-hot-selling-rav4-hybrid/" data-link-type='Press Release'>
        </li>
        <!-- End Item Project -->
 
