hopefully my final commit

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="span12" id=about_me>
         <div class="title-page">
           <h2 class="title">About Me</h2>
-          <h3 class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to continue working on a few passion projects while also gaining employment at a company that fosters a diverse environment full of other creatives that will continously push me to grow both as a developer and as a person. <h3>
+          <h3 class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to gain employment at a company that fosters a diverse environment full of other creatives that will continously push me to grow both as a developer and as a person. <h3>
         </div>
       </div>
     </div>
