--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <title>Steven Lund</title>
 
-<BASE href="https://stevenlund.github.io/profile/">
+<!-- <BASE href="https://stevenlund.github.io/profile/"> -->
 
 <meta name="description" content="Insert Your Site Description" />
 
@@ -240,7 +240,7 @@
       <div class="span12" id=about_me>
         <div class="title-page">
           <h2 class="title">About Me</h2>
-          <h3 class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to gain employment at a company that fosters a diverse environment full of other creatives that will continously push me to grow both as a developer and as a person. <h3>
+          <h3 id = "biography" class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to gain employment at a company that fosters a diverse environment full of other creatives that will continously push me to grow both as a developer and as a person. <h3>
         </div>
       </div>
     </div>
@@ -308,7 +308,7 @@
     <span class="overlay-img"></span>
     <span class="overlay-text-thumb">Tools</span>
   </div>
-  <img src="img/profile/kid.JPEG" alt="Tools">
+  <img src="img/profile/kid.jpg" alt="Tools">
 </div>
 <h3 class="profile-name">Tools</h3>
 <div class="d-flex justify-content-between">
