--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="span12" id=about_me>
         <div class="title-page">
           <h2 class="title">About Me</h2>
-          <h3 id = "biography" class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to gain employment at a company that fosters a diverse environment full of creative people that will continously push me to grow as a developer. <h3>
+          <h3 id = "biography" class="title-description">Former mechanical engineer, current full-stack developer. Music creator and consumer. My current goal is to gain employment at a company that fosters a diverse environment full of creative people that will continuously push me to grow as a developer. <h3>
         </div>
       </div>
     </div>
