added link to goflamingo demonstration

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
              <span class="overlay-img-thumb font-icon-plus"></span>
            </a>
            <!-- Thumb Image and Description -->
-           <img src="img/work/goflamingo.png" alt="A website to share travel experiences with your friends and get inspired for your next journey. Built with Ruby on Rails and JavaScript with Google Maps API integration." data-link="https://www.goflamingo.io" data-link-type='Website'>
+           <img src="img/work/goflamingo.png" alt="A website to share travel experiences with your friends and get inspired for your next journey. Built with Ruby on Rails and JavaScript with Google Maps API integration." data-link="https://www.youtube.com/watch?v=m6b24RLGMfk&t=27m1s" data-link-type='Website Demo'
          </li>
          <!-- End Item Project -->
 
